# xrdpfc-decision-ucsd

./: CMakeLists.txt  README
cmake/: FindPcre.cmake
spec/: xrdpfc-decision-ucsd.spec
src/: XrdPfcDecisionUcsd.cc  XrdPfcDecisionUcsd.hh
